@@ -1,5 +1,8 @@
 2004-03-29  Richard Hult  <richard@imendio.com>
 
+	* src/planner-gantt-row.c (gantt_row_event): Patch from Doroszlai
+	Attila to fix popup position.
+
 	* src/planner-gantt-model.c: (gantt_model_get_column_type),
 	(gantt_model_get_value):
 	* src/planner-gantt-model.h:
